Correcting a little something

--- a/cours-flask/exemple6/templates/place.html
+++ b/cours-flask/exemple6/templates/place.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Gazetteer {%if lieu %}| Lieu : {{lieu}} {% endif %}</title>
+        <title>Gazetteer {%if lieu %}| Lieu : {{lieu.nom}} {% endif %}</title>
     </head>
     <body>
         {% if lieu %}
