--- a/cours-flask/exemple11/templates/conteneur.html
+++ b/cours-flask/exemple11/templates/conteneur.html
@@ -9,7 +9,7 @@
     <body>
 
       <div class="container">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <a class="navbar-brand" href="{{ url_for('accueil') }}">Gazetteer</a>
         </nav>
         <div class="row">
