--- a/cours-flask/exemple14/gazetteer/templates/conteneur.html
+++ b/cours-flask/exemple14/gazetteer/templates/conteneur.html
@@ -5,9 +5,18 @@
         <title>Gazetteer {%block titre %}{%endblock%}</title>
         {% include "partials/css.html" %}
         {% include "partials/metadata.html" %}
+        <style type="text/css">
+            .hero  {
+                background-position: center center;
+                padding:10vh;
+                background-image: url({{url_for("static", filename="images/gallica_btv1b55007071f.jpeg")}});
+            }
+            .container .hero {
+                background-image: none;
+            }
+        </style>
     </head>
     <body>
-
 
       <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
         <a class="navbar-brand" href="{{ url_for('accueil') }}">Gazetteer</a>
@@ -16,6 +25,7 @@
           <button class="btn btn-outline-info" type="submit">Rechercher</button>
         </form>
       </nav>
+      {% block afternav %}{%endblock%}
       <div class="container">
         <div class="row">
             <div class="col">
